--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "styled-navbar-component": "^4.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
